Attempting to run mkdocs on all commits on all branches for debugging purposes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,5 +47,5 @@ pages:
   artifacts:
     paths:
       - public  # GitLab Pages serves content from this directory
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH  # Deploy only on main/master branch
+  # rules:
+  #   - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH  # Deploy only on main/master branch
