--- a/patterns/strands-single-agent/Dockerfile
+++ b/patterns/strands-single-agent/Dockerfile
@@ -31,7 +31,7 @@ USER bedrock_agentcore
 EXPOSE 8080
 
 # Copy agent code files
-COPY patterns/strands-single-agent/basic_agent.py .
+COPY patterns/strands-single-agent/tax_document_agent.py .
 COPY patterns/strands-single-agent/strands_code_interpreter.py .
 
 # Healthcheck using Python (no extra dependencies needed)
@@ -39,4 +39,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8080/ping', timeout=2)" || exit 1
 
 # Start agent with OpenTelemetry instrumentation
-CMD ["opentelemetry-instrument", "python", "-m", "basic_agent"]
+CMD ["opentelemetry-instrument", "python", "-m", "tax_document_agent"]
